2009-10-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/bspstart.c: Add missing prototypes.

2009-10-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/linkcmds: Add .sbss.*.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/ep1a.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/config.c: Spacing.

2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2008-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove -Qy from *link.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/init68360.c: Delete unused code.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/config.c, console/console.c, console/console.h,
	console/ns16550cfg.c, console/ns16550cfg.h, include/bsp.h,
	include/tm27.h, irq/irq_init.c, irq/openpic_xxx_irq.c,
	pci/no_host_bridge.c: File head clean up.
	* console/debugio.c: Removed.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* preinstall.am: Regenerated.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>
