@@ -30,6 +30,9 @@
 #include <bsp/vectors.h>
 #include <rtems/powerpc/powerpc.h>
 
+extern unsigned long __bss_start[], __SBSS_START__[], __SBSS_END__[];
+extern unsigned long __SBSS2_START__[], __SBSS2_END__[];
+
 extern unsigned long __rtems_end[];
 extern void L1_caches_enables(void);
 extern unsigned get_L2CR(void);
@@ -160,9 +163,6 @@ void bsp_pretasking_hook(void)
 
 void zero_bss(void)
 {
-  /* prevent these from being accessed in the short data areas */
-  extern unsigned long __bss_start[], __SBSS_START__[], __SBSS_END__[];
-  extern unsigned long __SBSS2_START__[], __SBSS2_END__[];
   memset(__SBSS_START__, 0, ((unsigned) __SBSS_END__) - ((unsigned)__SBSS_START__));
   memset(__SBSS2_START__, 0, ((unsigned) __SBSS2_END__) - ((unsigned)__SBSS2_START__));
   memset(__bss_start, 0, ((unsigned) __rtems_end) - ((unsigned)__bss_start));
