@@ -1,5 +1,9 @@
 2009-10-16	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* startup/bspstart.c: Remove nested externs.
+
+2009-10-16	Ralf Corsépius <ralf.corsepius@rtems.org>
+
 	* startup/bspstart.c: Add missing prototypes.
 
 2009-10-16	Ralf Corsépius <ralf.corsepius@rtems.org>
